<resources>
    <string name="app_name">Workout Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_app">Welcome to your fitness journey</string>
    <string name="start_button_image">start_button_image</string>
    <string name="start">START</string>
    <string name="welcome_to_your_fitness_journey">Welcome to your fitness journey</string>
    <string name="resting_time">Resting time</string>
    <string name="exercise_images">Exercise_Images</string>
    <string name="upcoming_exercise">Upcoming Exercise :</string>
    <string name="congratulations_for_on_your_today_s_achievements">Congratulations for on your today\'s achievements</string>
    <string name="hope_you_enjoyed_today_s_session">Hope you enjoyed today\'s session</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure_you_want_to_quit">Are you sure you want to quit?</string>
    <string name="cancel">CANCEL</string>
    <string name="proceed">PROCEED</string>
</resources>