<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_style"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_quit"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/text_color_dark"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"/>


    <FrameLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/cancel_dialog_btn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/proceed_dialog_btn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/proceed"
        android:textSize="18sp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="15dp"/>

    </FrameLayout>
</LinearLayout>