<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FinishFragment">

    <TextView
        android:id="@+id/congratulations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_for_on_your_today_s_achievements"
        android:textSize="25sp"
        android:textColor="@color/text_color_dark"
        android:layout_gravity="center|top"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hope_you_enjoyed_today_s_session"
        android:layout_gravity="center"
        android:textSize="70sp"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_gravity="center|bottom">


    <ImageButton
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:textSize="20sp">
    </ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finish"
            android:textColor="@color/text_color_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="16dp"/>

    </FrameLayout>

</FrameLayout>